--- a/data/old_pmids_diff.bib
+++ b/data/old_pmids_diff.bib
@@ -1,5 +1,4 @@
-@article{
-Marcus2007,
+@article{Marcus2007,
 mesh_heading_list = "Adolescent and Adult and Age Factors and Aged and Aged, 80 and over and Aging and Brain and Brain Mapping and Cross-Sectional Studies and Dementia and Female and Humans and Image Processing, Computer-Assisted and Magnetic Resonance Imaging and Male and Middle Aged and Reproducibility of Results and Sex Factors",
 isbn = "0898-929X",
 title = "Open Access Series of Imaging Studies (OASIS): cross-sectional MRI data in young, middle aged, nondemented, and demented older adults.",
@@ -7,13 +6,13 @@ abstract = "The Open Access Series of Imaging Studies is a series of magnetic re
 author = "Marcus, Daniel S and Wang, Tracy H and Parker, Jamie and Csernansky, John G and Morris, John C and Buckner, Randy L",
 number = "9",
 volume = "19",
-affiliation = "Washington University, MO 63110, USA. dmarcus@wustl.edu",
+affiliation = "Washington University, MO 63110, USA. dmarcus(at)wustl.edu",
 journal_iso = "J Cogn Neurosci",
 year = "2007",
 journal = "Journal of cognitive neuroscience",
-pages = "1498-507"}
-@article{
-Rohlfing2012,
+pages = "1498-507"
+}
+@article{Rohlfing2012,
 mesh_heading_list = "Authorship and Information Dissemination and Publishing",
 doi = "10.1016/j.neuroimage.2011.09.080",
 isbn = "1095-9572",
@@ -22,13 +21,13 @@ abstract = "We argue that the emerging practice of using the author byline to ac
 author = "Rohlfing, T and Poline, J-B",
 number = "4",
 volume = "59",
-affiliation = "SRI International, 333 Ravenswood Ave, Menlo Park, CA 94025, USA. rohlfing@ieee.org",
+affiliation = "SRI International, 333 Ravenswood Ave, Menlo Park, CA 94025, USA. rohlfing(at)ieee.org",
 journal_iso = "Neuroimage",
 year = "2012",
 journal = "NeuroImage",
-pages = "4189-95"}
-@article{
-Kaiser2011,
+pages = "4189-95"
+}
+@article{Kaiser2011,
 mesh_heading_list = "Brain and Humans and Models, Neurological and Neural Pathways",
 doi = "10.1016/j.neuroimage.2011.05.025",
 isbn = "1095-9572",
@@ -37,13 +36,13 @@ abstract = "High-throughput methods for yielding the set of connections in a neu
 author = "Kaiser, Marcus",
 number = "3",
 volume = "57",
-affiliation = "School of Computing Science, Newcastle University, Newcastle upon Tyne, UK. m.kaiser@ncl.ac.uk",
+affiliation = "School of Computing Science, Newcastle University, Newcastle upon Tyne, UK. m.kaiser(at)ncl.ac.uk",
 journal_iso = "Neuroimage",
 year = "2011",
 journal = "NeuroImage",
-pages = "892-907"}
-@article{
-Galea2009,
+pages = "892-907"
+}
+@article{Galea2009,
 mesh_heading_list = "Adult and Analysis of Variance and Attention and Biophysical Processes and Biophysics and Blinking and Brain Mapping and Brain Stem and Cerebellum and Electric Stimulation and Electrodes and Electromyography and Fatigue and Female and Functional Laterality and Humans and Male and Middle Aged and Motor Cortex and Muscle, Skeletal and Neuropsychological Tests and Pain and Transcranial Magnetic Stimulation and Young Adult",
 doi = "10.1523/JNEUROSCI.2184-09.2009",
 isbn = "1529-2401",
@@ -56,9 +55,9 @@ affiliation = "Department of Physical Medicine and Rehabilitation, Johns Hopkins
 journal_iso = "J. Neurosci.",
 year = "2009",
 journal = "The Journal of neuroscience : the official journal of the Society for Neuroscience",
-pages = "9115-22"}
-@article{
-Echtermeyer2011,
+pages = "9115-22"
+}
+@article{Echtermeyer2011,
 doi = "10.3389/fninf.2011.00010",
 isbn = "1662-5196",
 title = "Integrating temporal and spatial scales: human structural network motifs across age and region of interest size.",
@@ -69,9 +68,9 @@ affiliation = "Institute for Chemistry and Biology of the Marine Environment, Ca
 journal_iso = "Front Neuroinform",
 year = "2011",
 journal = "Frontiers in neuroinformatics",
-pages = "10"}
-@article{
-Weiner2012,
+pages = "10"
+}
+@article{Weiner2012,
 mesh_heading_list = "Alzheimer Disease and Biological Markers and Early Diagnosis and Humans and Longitudinal Studies and Neuroimaging",
 doi = "10.1016/j.jalz.2011.09.172",
 isbn = "1552-5279",
@@ -80,13 +79,13 @@ abstract = "The Alzheimer's Disease Neuroimaging Initiative (ADNI) is an ongoing
 author = "Weiner, Michael W and Veitch, Dallas P and Aisen, Paul S and Beckett, Laurel A and Cairns, Nigel J and Green, Robert C and Harvey, Danielle and Jack, Clifford R and Jagust, William and Liu, Enchi and Morris, John C and Petersen, Ronald C and Saykin, Andrew J and Schmidt, Mark E and Shaw, Leslie and Siuciak, Judith A and Soares, Holly and Toga, Arthur W and Trojanowski, John Q and Alzheimer’s Disease Neuroimaging Initiative",
 number = "1 Suppl",
 volume = "8",
-affiliation = "Department of Veterans Affairs Medical Center, Center for Imaging of Neurodegenerative Diseases, San Francisco, CA, USA. michael.weiner@ucsf.edu",
+affiliation = "Department of Veterans Affairs Medical Center, Center for Imaging of Neurodegenerative Diseases, San Francisco, CA, USA. michael.weiner(at)ucsf.edu",
 journal_iso = "Alzheimers Dement",
 year = "2012",
 journal = "Alzheimer's & dementia : the journal of the Alzheimer's Association",
-pages = "S1-68"}
-@article{
-Milham2012,
+pages = "S1-68"
+}
+@article{Milham2012,
 mesh_heading_list = "Interdisciplinary Communication and Neurosciences and Software",
 doi = "10.1016/j.neuron.2011.11.004",
 isbn = "1097-4199",
@@ -95,13 +94,13 @@ abstract = "The neuroimaging community is at a crossroads. Long characterized by
 author = "Milham, Michael Peter",
 number = "2",
 volume = "73",
-affiliation = "Center for the Developing Brain, Child Mind Institute, New York, NY 10022, USA. michael.milham@childmind.org",
+affiliation = "Center for the Developing Brain, Child Mind Institute, New York, NY 10022, USA. michael.milham(at)childmind.org",
 journal_iso = "Neuron",
 year = "2012",
 journal = "Neuron",
-pages = "214-8"}
-@article{
-Visscher2011,
+pages = "214-8"
+}
+@article{Visscher2011,
 mesh_heading_list = "Animals and Brain and Humans and Magnetic Resonance Imaging and Neurosciences",
 doi = "10.1186/1741-7015-9-34",
 isbn = "1741-7015",
@@ -109,13 +108,13 @@ title = "Would the field of cognitive neuroscience be advanced by sharing functi
 abstract = "During the past two decades, the advent of functional magnetic resonance imaging (fMRI) has fundamentally changed our understanding of brain-behavior relationships. However, the data from any one study add only incrementally to the big picture. This fact raises important questions about the dominant practice of performing studies in isolation. To what extent are the findings from any single study reproducible? Are researchers who lack the resources to conduct a fMRI study being needlessly excluded? Is pre-existing fMRI data being used effectively to train new students in the field? Here, we will argue that greater sharing and synthesis of raw fMRI data among researchers would make the answers to all of these questions more favorable to scientific discovery than they are today and that such sharing is an important next step for advancing the field of cognitive neuroscience.",
 author = "Visscher, Kristina M and Weissman, Daniel H",
 volume = "9",
-affiliation = "Department of Neurobiology, University of Alabama, Birmingham, AL 35294, USA. kmv@uab.edu",
+affiliation = "Department of Neurobiology, University of Alabama, Birmingham, AL 35294, USA. kmv(at)uab.edu",
 journal_iso = "BMC Med",
 year = "2011",
 journal = "BMC medicine",
-pages = "34"}
-@article{
-Linden2011,
+pages = "34"
+}
+@article{Linden2011,
 mesh_heading_list = "Brain and Brain Mapping and Dementia and Depressive Disorder, Major and Electroencephalography and Functional Neuroimaging and Genetic Association Studies and Genetic Markers and Genome-Wide Association Study and Genotype and Humans and Image Processing, Computer-Assisted and Magnetic Resonance Imaging and Magnetoencephalography and Mental Disorders and Mental Processes and Neural Pathways and Neurons and Neuropsychiatry and Positron-Emission Tomography and Schizophrenia and Signal Processing, Computer-Assisted and Synaptic Transmission",
 doi = "10.3109/15622975.2011.598713",
 isbn = "1814-1412",
@@ -123,13 +122,13 @@ title = "Modern neuroimaging in psychiatry: towards the integration of functiona
 abstract = "Thirty-five years of psychiatric imaging along traditional diagnostic boundaries have revealed a great deal about the structural and functional brain changes that accompany mental disorders but not produced reliable biomarkers. One reason may be that clinical syndromes represent the phenotypic expression of many different genotypes and biological pathways. Neuroimaging is now increasingly being used to map out the pathways from genes (obtained from candidate or genome-wide association studies) to the cognitive, emotional and behavioural phenotypes that result in syndromes like schizophrenia or depression. The armamentarium of neuroimaging is becoming increasingly versatile, and now includes methods with considerable spatial, temporal and/or molecular resolution. We can expect that a sophisticated combination of these techniques with genetic and pharmacological information will usher into a new era of psychiatric imaging that will aid a biological classification of mental diseases.",
 author = "Linden, David and Thome, Johannes",
 volume = "12 Suppl 1",
-affiliation = "MRC Centre for Neuropsychiatric Genetics and Genomics, Department of Psychological Medicine and Neurology, Cardiff University School of Medicine, Cardiff, UK. lindend@cardiff.ac.uk",
+affiliation = "MRC Centre for Neuropsychiatric Genetics and Genomics, Department of Psychological Medicine and Neurology, Cardiff University School of Medicine, Cardiff, UK. lindend(at)cardiff.ac.uk",
 journal_iso = "World J. Biol. Psychiatry",
 year = "2011",
 journal = "The world journal of biological psychiatry : the official journal of the World Federation of Societies of Biological Psychiatry",
-pages = "6-10"}
-@article{
-Ouyang2011,
+pages = "6-10"
+}
+@article{Ouyang2011,
 mesh_heading_list = "Adult and Artifacts and Blood Flow Velocity and Cerebrovascular Circulation and Female and Humans and Image Enhancement and Image Processing, Computer-Assisted and Magnetic Resonance Angiography and Male and Regional Blood Flow and Signal-To-Noise Ratio and Spin Labels",
 doi = "10.1002/mrm.22815",
 isbn = "1522-2594",
@@ -138,13 +137,13 @@ abstract = "Transfer insensitive labeling technique (TILT) was previously applie
 author = "Ouyang, Cheng and Sutton, Bradley P",
 number = "3",
 volume = "66",
-affiliation = "Department of Bioengineering, University of Illinois at Urbana-Champaign, Urbana, Illinois 61801, USA. couyang2@illinois.edu",
+affiliation = "Department of Bioengineering, University of Illinois at Urbana-Champaign, Urbana, Illinois 61801, USA. couyang2(at)illinois.edu",
 journal_iso = "Magn Reson Med",
 year = "2011",
 journal = "Magnetic resonance in medicine : official journal of the Society of Magnetic Resonance in Medicine / Society of Magnetic Resonance in Medicine",
-pages = "768-76"}
-@article{
-Van Horn2002,
+pages = "768-76"
+}
+@article{VanHorn2002,
 mesh_heading_list = "Brain and Databases as Topic and Humans and Internet and Magnetic Resonance Imaging",
 isbn = "1471-003X",
 title = "Opinion: Databasing fMRI studies towards a 'discovery science' of brain function.",
@@ -152,12 +151,12 @@ journal = "Nature reviews. Neuroscience",
 author = "Van Horn, John D and Gazzaniga, Michael S",
 number = "4",
 volume = "3",
-affiliation = "Center for Cognitive Neuroscience, Dartmouth College, Hanover, New Hampshire 03755, USA. John.D.Van.Horn@dartmouth.edu",
+affiliation = "Center for Cognitive Neuroscience, Dartmouth College, Hanover, New Hampshire 03755, USA. John.D.Van.Horn(at)dartmouth.edu",
 journal_iso = "Nat. Rev. Neurosci.",
 year = "2002",
-pages = "314-8"}
-@article{
-Congdon2010,
+pages = "314-8"
+}
+@article{Congdon2010,
 mesh_heading_list = "Animals and Behavioral Symptoms and Brain Diseases and Cognition Disorders and Genetic Association Studies and Genetic Predisposition to Disease and Humans and Phenotype",
 doi = "10.1016/j.neuron.2010.10.007",
 isbn = "1097-4199",
@@ -170,9 +169,9 @@ affiliation = "Center for Neurobehavioral Genetics, Semel Institute for Neurosci
 journal_iso = "Neuron",
 year = "2010",
 journal = "Neuron",
-pages = "218-30"}
-@article{
-Landman2011,
+pages = "218-30"
+}
+@article{Landman2011,
 mesh_heading_list = "Adult and Brain and Brain Mapping and Female and Humans and Image Interpretation, Computer-Assisted and Magnetic Resonance Imaging and Male and Middle Aged and Reproducibility of Results and Young Adult",
 doi = "10.1016/j.neuroimage.2010.11.047",
 isbn = "1095-9572",
@@ -181,13 +180,13 @@ abstract = "Modern MRI image processing methods have yielded quantitative, morph
 author = "Landman, Bennett A and Huang, Alan J and Gifford, Aliya and Vikram, Deepti S and Lim, Issel Anne L and Farrell, Jonathan A D and Bogovic, John A and Hua, Jun and Chen, Min and Jarso, Samson and Smith, Seth A and Joel, Suresh and Mori, Susumu and Pekar, James J and Barker, Peter B and Prince, Jerry L and van Zijl, Peter C M",
 number = "4",
 volume = "54",
-affiliation = "Department of Electrical Engineering, Vanderbilt University, Nashville, TN 37235-1679, USA. bennett.landman@vanderbilt.edu",
+affiliation = "Department of Electrical Engineering, Vanderbilt University, Nashville, TN 37235-1679, USA. bennett.landman(at)vanderbilt.edu",
 journal_iso = "Neuroimage",
 year = "2011",
 journal = "NeuroImage",
-pages = "2854-66"}
-@article{
-Khamsi2012,
+pages = "2854-66"
+}
+@article{Khamsi2012,
 mesh_heading_list = "Alzheimer Disease and Attention Deficit Disorder with Hyperactivity and Brain Mapping and Humans and Magnetic Resonance Imaging",
 doi = "10.1038/nm0312-338",
 isbn = "1546-170X",
@@ -198,9 +197,9 @@ number = "3",
 volume = "18",
 journal_iso = "Nat. Med.",
 year = "2012",
-pages = "338-40"}
-@article{
-Cabral2012,
+pages = "338-40"
+}
+@article{Cabral2012,
 mesh_heading_list = "Adult and Algorithms and Brain and Cluster Analysis and Cognition and Computer Simulation and Data Interpretation, Statistical and Diffusion Tensor Imaging and Female and Humans and Image Processing, Computer-Assisted and Male and Middle Aged and Models, Neurological and Nerve Net and Reproducibility of Results and Schizophrenia and Schizophrenic Psychology and Young Adult",
 doi = "10.1055/s-0032-1309001",
 isbn = "1439-0795",
@@ -208,13 +207,13 @@ title = "Functional graph alterations in schizophrenia: a result from a global a
 abstract = "During rest, the brain exhibits slow hemodynamic fluctuations (<0.1 Hz) that are correlated across spatially segregated brain regions, defining functional networks. Resting-state functional networks of people with schizophrenia were found to have graph properties that differ from those of control subjects. Namely, functional graphs from patients exhibit reduced small-worldness, increased hierarchy, lower clustering, improved efficiency and greater robustness. Notably, most of these parameters correlate with patients' cognitive performance.To test if a brain-wide coupling deficit could be at the origin of such network reorganization, we use a model of resting-state activity where the coupling strength can be manipulated. For a range of coupling values, the simulated functional graphs obtained were characterized using graph theory.For a coupling range, simulated graphs shared properties of healthy resting-state functional graphs. On decreasing the coupling strength, the resultant functional graphs exhibited a topological reorganization, in the same way as described in schizophrenia.This work shows how complex functional graph alterations reported in schizophrenia can be accounted for by a decrease in the structural coupling strength. These results are corroborated by reports of lower white matter density in schizophrenia.",
 author = "Cabral, J and Kringelbach, M L and Deco, G",
 volume = "45 Suppl 1",
-affiliation = "Theoretical and Computational Neuroscience Group, Center for Brain and Cognition, Universitat Pompeu Fabra, Barcelona, Spain. joana.cabral@upf.edu",
+affiliation = "Theoretical and Computational Neuroscience Group, Center for Brain and Cognition, Universitat Pompeu Fabra, Barcelona, Spain. joana.cabral(at)upf.edu",
 journal_iso = "Pharmacopsychiatry",
 year = "2012",
 journal = "Pharmacopsychiatry",
-pages = "S57-64"}
-@article{
-Bilder2011,
+pages = "S57-64"
+}
+@article{Bilder2011,
 mesh_heading_list = "Evidence-Based Medicine and Genome and History, 20th Century and History, 21st Century and Humans and Information Science and Mental Disorders and Neuropsychological Tests and Neuropsychology and Psychometrics",
 doi = "10.1017/S1355617710001396",
 isbn = "1469-7661",
@@ -223,13 +222,13 @@ abstract = "Neuropsychology is poised for transformations of its concepts and me
 author = "Bilder, Robert M",
 number = "1",
 volume = "17",
-affiliation = "Jane and Terry Semel Institute for Neuroscience & Human Behavior at UCLA, Los Angeles, California 90095, USA. rbilder@mednet.ucla.edu",
+affiliation = "Jane and Terry Semel Institute for Neuroscience & Human Behavior at UCLA, Los Angeles, California 90095, USA. rbilder(at)mednet.ucla.edu",
 journal_iso = "J Int Neuropsychol Soc",
 year = "2011",
 journal = "Journal of the International Neuropsychological Society : JINS",
-pages = "7-13"}
-@article{
-Loth2011,
+pages = "7-13"
+}
+@article{Loth2011,
 mesh_heading_list = "Biological Markers and Brain and Cognition Disorders and Genetic Predisposition to Disease and Humans and Individuality and Inhibition (Psychology) and Neuroimaging and Neuropsychological Tests and Polymorphism, Genetic and Predictive Value of Tests and Reinforcement (Psychology) and Risk Factors and Substance-Related Disorders",
 doi = "10.1016/j.tics.2011.07.008",
 isbn = "1879-307X",
@@ -242,9 +241,9 @@ affiliation = "MRC-SGDP-Centre, Institute of Psychiatry, King's College, London 
 journal_iso = "Trends Cogn. Sci. (Regul. Ed.)",
 year = "2011",
 journal = "Trends in cognitive sciences",
-pages = "436-46"}
-@article{
-Frisoni2011,
+pages = "436-46"
+}
+@article{Frisoni2011,
 mesh_heading_list = "Biological Markers and Databases, Factual and Diagnostic Imaging and Humans and Image Processing, Computer-Assisted and Laboratories and Neurodegenerative Diseases and Reproducibility of Results",
 doi = "10.1038/nrneurol.2011.99",
 isbn = "1759-4766",
@@ -253,13 +252,13 @@ abstract = "The unprecedented growth, availability and accessibility of imaging 
 author = "Frisoni, Giovanni B and Redolfi, Alberto and Manset, David and Rousseau, Marc-Étienne and Toga, Arthur and Evans, Alan C",
 number = "8",
 volume = "7",
-affiliation = "IRCCS Fatebenefratelli, Via Pilastroni 4, 25125 Brescia, Italy. gfrisoni@fatebenefratelli.it",
+affiliation = "IRCCS Fatebenefratelli, Via Pilastroni 4, 25125 Brescia, Italy. gfrisoni(at)fatebenefratelli.it",
 journal_iso = "Nat Rev Neurol",
 year = "2011",
 journal = "Nature reviews. Neurology",
-pages = "429-38"}
-@article{
-Cohen2011,
+pages = "429-38"
+}
+@article{Cohen2011,
 doi = "10.3389/fnins.2011.00075",
 isbn = "1662-453X",
 title = "Decoding continuous variables from neuroimaging data: basic and clinical applications.",
@@ -270,9 +269,9 @@ affiliation = "Helen Wills Neuroscience Institute, University of California Berk
 journal_iso = "Front Neurosci",
 year = "2011",
 journal = "Frontiers in neuroscience",
-pages = "75"}
-@article{
-Vogelstein2011,
+pages = "75"
+}
+@article{Vogelstein2011,
 doi = "10.1186/2042-1001-1-16",
 isbn = "2042-1001",
 title = "Q&A: What is the Open Connectome Project?",
@@ -280,12 +279,12 @@ journal = "Neural systems & circuits",
 author = "Vogelstein, Joshua T",
 number = "1",
 volume = "1",
-affiliation = "Department of Applied Mathematics and Statistics, John Hopkins University,100 Whitehead Hall, 3400 North Charles Street, Baltimore, MD 21218-2682, USA. joshuav@jhu.edu.",
+affiliation = "Department of Applied Mathematics and Statistics, John Hopkins University,100 Whitehead Hall, 3400 North Charles Street, Baltimore, MD 21218-2682, USA. joshuav(at)jhu.edu.",
 journal_iso = "Neural Syst Circuits",
 year = "2011",
-pages = "16"}
-@article{
-Yarkoni2010,
+pages = "16"
+}
+@article{Yarkoni2010,
 mesh_heading_list = "Animals and Brain and Brain Mapping and Cognition and Cooperative Behavior and Data Collection and Diagnostic Imaging and Humans and Meta-Analysis as Topic and Neurosciences and Statistics as Topic",
 doi = "10.1016/j.tics.2010.08.004",
 isbn = "1879-307X",
@@ -294,13 +293,13 @@ abstract = "Cognitive neuroscientists increasingly recognize that continued prog
 author = "Yarkoni, Tal and Poldrack, Russell A and Van Essen, David C and Wager, Tor D",
 number = "11",
 volume = "14",
-affiliation = "Department of Psychology and Neuroscience, University of Colorado at Boulder, UCB 345, Boulder, CO 80309, USA. tal.yarkoni@colorado.edu",
+affiliation = "Department of Psychology and Neuroscience, University of Colorado at Boulder, UCB 345, Boulder, CO 80309, USA. tal.yarkoni(at)colorado.edu",
 journal_iso = "Trends Cogn. Sci. (Regul. Ed.)",
 year = "2010",
 journal = "Trends in cognitive sciences",
-pages = "489-96"}
-@article{
-Turner2012,
+pages = "489-96"
+}
+@article{Turner2012,
 mesh_heading_list = "Biomedical Research and Brain Mapping and Cognition and Humans and Magnetic Resonance Imaging and Positron-Emission Tomography and Terminology as Topic",
 doi = "10.1007/s12021-011-9126-x",
 isbn = "1559-0089",
@@ -309,13 +308,13 @@ abstract = "We present the basic structure of the Cognitive Paradigm Ontology (C
 author = "Turner, Jessica A and Laird, Angela R",
 number = "1",
 volume = "10",
-affiliation = "Mind Research Network, Albuquerque, NM, USA. jturner@mrn.org",
+affiliation = "Mind Research Network, Albuquerque, NM, USA. jturner(at)mrn.org",
 journal_iso = "Neuroinformatics",
 year = "2012",
 journal = "Neuroinformatics",
-pages = "57-66"}
-@article{
-Buckner2010,
+pages = "57-66"
+}
+@article{Buckner2010,
 mesh_heading_list = "Brain and Brain Mapping and Humans and Mental Disorders and Nerve Net",
 doi = "10.1073/pnas.1005987107",
 isbn = "1091-6490",
@@ -324,12 +323,12 @@ journal = "Proceedings of the National Academy of Sciences of the United States 
 author = "Buckner, Randy L",
 number = "24",
 volume = "107",
-affiliation = "Howard Hughes Medical Institute at Harvard University, Cambridge, MA 02138, USA. randy_buckner@harvard.edu",
+affiliation = "Howard Hughes Medical Institute at Harvard University, Cambridge, MA 02138, USA. randy_buckner(at)harvard.edu",
 journal_iso = "Proc. Natl. Acad. Sci. U.S.A.",
 year = "2010",
-pages = "10769-70"}
-@article{
-Michel2012,
+pages = "10769-70"
+}
+@article{Michel2012,
 mesh_heading_list = "Brain and Brain Mapping and Electroencephalography and Epilepsy and Humans and Mental Disorders and Nervous System Diseases and Neural Pathways and Neuroimaging",
 doi = "10.1016/j.neuroimage.2011.12.039",
 isbn = "1095-9572",
@@ -338,8 +337,9 @@ abstract = "Recent advances in signal analysis have engendered EEG with the stat
 author = "Michel, Christoph M and Murray, Micah M",
 number = "2",
 volume = "61",
-affiliation = "EEG Brain Mapping Core, Center for Biomedical Imaging of Lausanne and Geneva, and Department of Fundamental Neurosciences, University Medical School, 1 rue Michel-Servet, Geneva, Switzerland. Christoph.michel@unige.ch",
+affiliation = "EEG Brain Mapping Core, Center for Biomedical Imaging of Lausanne and Geneva, and Department of Fundamental Neurosciences, University Medical School, 1 rue Michel-Servet, Geneva, Switzerland. Christoph.michel(at)unige.ch",
 journal_iso = "Neuroimage",
 year = "2012",
 journal = "NeuroImage",
-pages = "371-85"}
+pages = "371-85"
+}
